[gd_scene load_steps=18 format=2]

[ext_resource path="res://art/hud/badge/badges1.png" type="Texture" id=1]
[ext_resource path="res://art/hud/badge/badges2.png" type="Texture" id=2]
[ext_resource path="res://art/hud/badge/badges4.png" type="Texture" id=3]
[ext_resource path="res://art/hud/badge/badges5.png" type="Texture" id=4]
[ext_resource path="res://store.gd" type="Script" id=5]
[ext_resource path="res://art/fonts/Extrude.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://art/fonts/16bfZX.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=3]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/GridContainer/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -5, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/GridContainer/TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -5, -5 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/GridContainer/TextureRect2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 79, -5 ), Vector2( 74, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/GridContainer/TextureRect2:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 74, 0 ), Vector2( 79, -5 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/GridContainer/TextureRect3:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 79 ), Vector2( 0, 74 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/GridContainer/TextureRect3:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 74 ), Vector2( -5, 79 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/GridContainer/TextureRect4:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 79, 79 ), Vector2( 74, 74 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/CenterContainer/GridContainer/TextureRect4:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 74, 74 ), Vector2( 79, 79 ) ]
}

[node name="store" type="Node2D"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer"]
margin_left = 239.0
margin_top = 142.0
margin_right = 292.0
margin_bottom = 158.0
custom_fonts/font = SubResource( 1 )
text = "points"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 197.0
margin_top = 76.0
margin_right = 335.0
margin_bottom = 224.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/CenterContainer/GridContainer"]
margin_left = 74.0
margin_right = 138.0
margin_bottom = 64.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/CenterContainer/GridContainer"]
margin_top = 74.0
margin_right = 64.0
margin_bottom = 138.0
texture = ExtResource( 3 )

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/CenterContainer/GridContainer"]
margin_left = 74.0
margin_top = 74.0
margin_right = 138.0
margin_bottom = 138.0
texture = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/CenterContainer/GridContainer"]
margin_top = 148.0
margin_right = 64.0
margin_bottom = 148.0

[node name="explain" type="Label" parent="CanvasLayer"]
margin_left = 8.26331
margin_top = 247.0
margin_right = 524.263
margin_bottom = 258.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 0.403922 )
text = "Gain more attack power"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/badge1in = SubResource( 3 )
anims/badge1out = SubResource( 4 )
anims/badge2in = SubResource( 5 )
anims/badge2out = SubResource( 6 )
anims/badge3in = SubResource( 7 )
anims/badge3out = SubResource( 8 )
anims/badge4in = SubResource( 9 )
anims/badge4out = SubResource( 10 )
[connection signal="mouse_entered" from="CanvasLayer/CenterContainer/GridContainer/TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/CenterContainer/GridContainer/TextureRect" to="." method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/CenterContainer/GridContainer/TextureRect2" to="." method="_on_TextureRect2_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/CenterContainer/GridContainer/TextureRect2" to="." method="_on_TextureRect2_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/CenterContainer/GridContainer/TextureRect3" to="." method="_on_TextureRect3_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/CenterContainer/GridContainer/TextureRect3" to="." method="_on_TextureRect3_mouse_exited"]
[connection signal="mouse_entered" from="CanvasLayer/CenterContainer/GridContainer/TextureRect4" to="." method="_on_TextureRect4_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/CenterContainer/GridContainer/TextureRect4" to="." method="_on_TextureRect4_mouse_exited"]
